styles/globals.scss
@import 'bootstrap/scss/_functions.scss';
@import 'bootstrap/scss/_variables.scss';
@import 'bootstrap/scss/_mixins.scss';

@import "Variables.scss";

html, body { height: 100% }
#__next { 
    height: 100%; 
    display: flex; 
    flex-direction: column;
}

body {
    color: white;
    background-color: #4b7667;
}

.dropdown-container {
  color: black;
}

.blackbg {
    background-color: rgb(var(--bs-dark-rgb)) !important;
}

.divider {
    height: 0.8px;
    width: 100%;
    background-color: white;
  }

  a.link {
    color: #00a7d1;
    text-decoration: none;
  }
  a.link:hover {
      text-decoration: underline;
  }

nav {
    background-color: rgb(var(--bs-dark-rgb)) !important;
    .dropdown-menu {
        .dropdown-item {
            color: white;
        }
        .dropdown-item:hover {
            background-color: #4f4f4f;
        }
    
        background: #3f3f3f;
        border-radius: 0 0 15px 15px;
    }
    
    .dropdown-toggle {
        color: white !important;
    }
}

.homeTitle {
    font-weight: 700;
    font-size: 55px;
    text-transform: uppercase;
    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    font-family: 'Rubik', sans-serif;
}

.blackblock {
    background-color: rgba(17, 17, 17, 0.9);
    border: 2px solid rgba(17, 17, 17, 0.9);
    border-radius: 25px;
    box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.72);
    padding: 10px;
  }

  .grayblock {
    background-color: #343a40;
    border: 2px solid #343a40;
    border-radius: 25px;
    -webkit-box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.72);
    -moz-box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.72);
    box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.72);
    padding: 10px;
    width: 100%;
  
    label {
      color: white !important
    }
  }

.blackButton {
  color: white;
  background-color: #222222;
  font-weight: 700;
  text-transform: uppercase;
  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
  font-family: 'Rubik', sans-serif;
  transition: color .1s ease-in-out, background-color .1s ease-in-out;
  padding-top: 2px;
  padding-bottom: 2px;
  margin-top: 2px;
  margin-bottom: 2px;
  border-radius: 8px;
}

a {
  color: unset;
  text-decoration: none;
}

.blackButton:hover {
    color: $link-color;
    cursor: pointer;
    text-decoration: underline;
}
  

.footer {
    padding: 10px;
    background-color: rgb(var(--bs-dark-rgb)) !important;
    width: 100%;
}

.listItem {
    border-width: 0 0 1px 0;
    border-style: solid;
    border-color: #4e4e4e;
    padding-left: 4px;
}

.btn-primary {
  margin-right: 10px;
}

